# python-swagger-restful-api

./: .env  .gitignore  README.md  dev-requirements.txt  injector.py  log_config.py  main.py  pyproject.toml  pytest.sh  run-cat-output.sh  run-script-diff.sh  service-log.sh  service-start.sh
config/: config.py  log_config.py
controller/: cluster_controller.py  index_controller.py  node_controller.py  search_controller.py
monitoring/: index.html  monitoring.html
monitoring/css/: common.css  jquery-ui.css
monitoring/js/: monitoring.js
repository/: hosts  repository_schema.py  schema.py
scripts/: mapping_diff_script.py  node_settings_script.py  yaml_diff_script.py
server/: flask-service-start.sh  http_server.py
service/: es_search_handler.py  es_util.py  query_builder.py
template/: index.html  monitoring.html
template/css/: buttons.dataTables.min.css  datatables.min.css  fonts.css
template/js/: common.js  datatables.min.js  full_numbers_no_ellipses.js  jquery-ui.js  monitoring.js  webfontloader.js
tests/: conftest.py  pytest.ini  test_api.py  test_index_mapping.py
