[tool.poetry]
name = "python-swagger-restful-api"
version = "0.1.0"
description = ""
authors = ["euiyoung.hwang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pytz = "^2024.1"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
elasticsearch = "7.13"
python-dotenv = "^1.0.1"
jsondiff = "^2.0.0"
deepdiff = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
